# pepspy

./: .gitignore  README.md  requirements_dev.txt  setup.cfg
docs/source/: conf.py  index.rst
src/pepspy/: __init__.py  network.py  node.py  peps.py
src/pepspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_peps.py
