[metadata]
name = pepspy
description-file = README.md
description = Module for simulating PEPS tensor networks
author = Hitham Hassan
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages =
    pepspy
install_requires =
    numpy>=0.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    coverage>=7.0
    flake8>=3.9

[flake8]
max-line-length = 140
